# test_task_golik

./: README.md  pyproject.toml
assertions/: assertions.py
locators/: credentials.py  locators.py
pages/: casino_page.py  main_page.py
tests/: conftest.py  test_main_page.py
utils/: handle_report_methods.py  logger.py
